Setup project for unit testing